# lib-format

./: .gitignore  CMakeLists.txt  README.md
src/: bt.hpp  external.hpp  main.cpp  nodes.hpp  reader.hpp  tt.hpp  types.hpp  writer.hpp
src/binary/: header.hpp  helper.hpp  main.cpp  nodes.hpp  reader.cpp  reader.hpp  types.hpp  writer.cpp  writer.hpp
src/binary/nodes/: array.hpp  dict.hpp  node.hpp  primitive.hpp  text.hpp
src/common/: external.hpp  file.cpp  file.hpp  util.cpp  util.hpp
src/nodes/: array.hpp  dict.hpp  node.hpp  primitive.hpp  text.hpp
src/text/: error.cpp  error.hpp  helper.hpp  main.cpp  node.hpp  nodes.hpp  parser.cpp  parser.hpp  span.cpp  span.hpp  token.cpp  token.hpp
src/text/nodes/: dict.hpp  list.hpp  node.hpp  primitive.hpp
